Created Readme and other minor tweaks

--- a/Angular/src/app/people-searcher/people-searcher.component.html
+++ b/Angular/src/app/people-searcher/people-searcher.component.html
@@ -3,7 +3,7 @@
 <div class="top-spacer"></div>
 <div class="middle">
   <h1> People Searcher </h1>
-  <input class="search" type="text" placeholder="Search" [(ngModel)]="searchText" (keyup.enter)="searchPeople()">
+  <input class="search" type="text" placeholder="Search..." [(ngModel)]="searchText" (keyup.enter)="searchPeople()">
   <span></span>
   <a (click)="searchPeople()">
     <i class="fa fa-search"></i>
