Minor changes to Readme and css

--- a/Angular/src/app/people-searcher/people-searcher.component.scss
+++ b/Angular/src/app/people-searcher/people-searcher.component.scss
@@ -40,11 +40,12 @@ i {
     display: inline-block;
     vertical-align: middle;
     font-size: 2.2em;
+    cursor:pointer;
 }
 
 i:hover {
     opacity: 1;
-    cursor: default;
+    cursor:pointer;
 }
 
 #pic {
